--- a/phpmyadmin/docker-compose.yml
+++ b/phpmyadmin/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         ports:
             - "9095:80"
         environment:
-            PMA_HOST: solution_db
+            PMA_HOST: software_db
             MYSQL_ROOT_PASSWORD: rohit123
         networks:
             - "solution_default"
